--- a/projeto_pessoal/src/assets/main.css
+++ b/projeto_pessoal/src/assets/main.css
@@ -2,5 +2,6 @@
   padding: 0;
   margin: 0;
   box-sizing: content-box;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  color: white;
 }
